Clear input when adding item

--- a/react-learning/getting-started-with-tdd-in-react/package.json
+++ b/react-learning/getting-started-with-tdd-in-react/package.json
@@ -4,6 +4,7 @@
   "description": "Getting Started with TDD in React",
   "main": "index.js",
   "scripts": {
+    "start": "quik",
     "test": "mocha --require setup.js *.spec.js",
     "test:watch": "npm run test -- --watch"
   },
